test(Switch): Tested the correct behaviour of the switch
Also improved testing framework and included necessary changes for compiling the proyect.

--- a/simulations/ScenarioTestFog/omnetpp.ini
+++ b/simulations/ScenarioTestFog/omnetpp.ini
@@ -6,7 +6,7 @@ print-undisposed=true
 simtime-resolution = ps
 
 ## Network
-network = ScenarioTest
+network = INETComm
 
 ## Comand line environment
 cmdenv-express-mode = false
@@ -81,29 +81,6 @@ ScenarioTest.userGenerator.shuffleUsers = false
 # Apps
 *.dc_DataCentre[*].blade[*].osModule.appsVectors[*].appModule[*].userAppName = "DummyApplication"
 
-###-----------------------------------------------------------------
-###-.-  Configuration of the computing racks type B
-###-----------------------------------------------------------------
-*.dc_DataCentre[*].blade[*].staticAppAssignment = false
-*.dc_DataCentre[*].blade[*].isVirtualHardware = true
-*.dc_DataCentre[*].blade[*].maxUsers = 24
-*.dc_DataCentre[*].blade[*].maxVMs = 24
-*.dc_DataCentre[*].blade[*].numCpuCores = 24
-*.dc_DataCentre[*].blade[*].memorySize = 512GB
-*.dc_DataCentre[*].blade[*].diskSize = 500GB
-*.dc_DataCentre[*].blade[*].diskReadBandwidth = 500Mbps
-*.dc_DataCentre[*].blade[*].diskWriteBandwidth = 500Mbps
-
-# Hypervisor
-*.dc_DataCentre[*].blade[*].osModule.hypervisor.active = true
-
-# CPU
-*.dc_DataCentre[*].blade[*].cpu.cpuCore[*].speed = 60000
-*.dc_DataCentre[*].blade[*].cpu.cpuCore[*].tick = 60s
-
-# Apps
-*.dc_DataCentre[*].blade[*].osModule.appsVectors[*].appModule[*].userAppName = "DummyApplication"
-
 [Config TestEdgeFog]
 network = ScenarioTestEdgeFog
 sim-time-limit = 500s
@@ -120,7 +97,7 @@ ScenarioTestEdgeFog.**.vector-recording = true
 #ScenarioTestEdgeFog.controller.toFog.**.statistic-recording = true
 
 [Config INETComm]
-network = INETComm
+# network = INETComm
 **.netAdapter1.debug = true
 # Configurator settings
 #*.configurator.dumpAddresses = true
