docs: Updated installation instructions
Also fixed permissions for scripts and updated the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,13 @@ src/.tmp*
 simulations/**/.qtenvrc
 simulations/**/results/
 simulations/**/results/*.*
+
+# Executables
+Simcan2Cloud
+Simcan2Cloud_dbg
+
+# GUI files
+.qtenvrc
+
+# VsCode configuration files
+.vscode/
