fix(EdgeNetwork): Fixed issues with the edge tiles and configurations
Sadly, the very simple example of the house sensors just cannot use L3AdressResolver
because it assumes absolute module path finding instead of relative path finding

--- a/simulations/EdgeTesting/omnetpp.ini
+++ b/simulations/EdgeTesting/omnetpp.ini
@@ -60,7 +60,7 @@ seed-0-mt = 0
 # Sensor settings
 *.tile[*].sensor*.numApps = 1
 *.tile[*].sensor*.app[*].typename = "UdpBasicApp"
-*.tile[*].sensor*.app[*].destAddresses = "^.device"
+*.tile[*].sensor*.app[*].destAddresses = "^.^.^.device.ns" # Doesn't work, it indexes as an absolute path!
 *.tile[*].sensor*.app[*].destPort = 1000
 *.tile[*].sensor*.app[*].sendInterval = 1s
 *.tile[*].sensor*.app[*].startTime = uniform(0s,1s)
@@ -74,3 +74,4 @@ seed-0-mt = 0
 
 ## Config Ip assignment
 *.configurator.config = xmldoc("net-settings.xml")
+*.configurator.dumpConfig = "ips.xml"
