fix: General bug fixes
Also there's this bug in OMNeT++ 5.6.2 that probably doesn't exist anymore in the 6.0.
Either way this bug is now avoided (in respect to dynamic vector module creation)

--- a/src/Makefile
+++ b/src/Makefile
@@ -48,6 +48,7 @@ OBJS = \
     $O/Architecture/Network/Stack/TcpBaseClient.o \
     $O/Architecture/Network/Stack/TcpBaseProxy.o \
     $O/Architecture/Network/Stack/TcpBaseProxyThread.o \
+    $O/Architecture/Network/Stack/Listener/UdpListener.o \
     $O/Architecture/Network/Stack/Queue/QueuePullClient.o \
     $O/Architecture/Network/Stack/Queue/QueuePushClient.o \
     $O/Architecture/Network/Switch/Switch.o \
