feat: Added the standalone configuration to the FogShowcase scenario

--- a/simulations/FogShowcase/omnetpp.ini
+++ b/simulations/FogShowcase/omnetpp.ini
@@ -1,6 +1,20 @@
 [General]
 network = FogShowcase
 
+# Logging events settings
+*.cp.cmdenv-log-level = trace
+*.ug.generator.cmdenv-log-level = trace
+*.queue.manager.cmdenv-log-level = trace
+*.queue.pullServer.**.pullService.cmdenv-log-level = trace
+*.queue.pushServer.**.pushService.cmdenv-log-level = trace
+*.queue.queues[*].**.pushService.cmdenv-log-level = trace
+**.dcManager.cmdenv-log-level = trace
+#**.resourceManager.cmdenv-log-level = trace
+#**.blade[*].*.cmdenv-log-level = trace
+
+**.cmdenv-log-level = off
+cmdenv-log-prefix = "[ %m ] : "
+
 # SimData settings
 *.simData.simSchema.typename = "SimSchemaMySQL"
 *.simData.simSchema.hostName = "tcp://127.0.0.1:3306"
@@ -43,6 +57,7 @@ FogShowcase.ug.generator.maxSubscriptionTime = 86400
 FogShowcase.ug.generator.offerAcceptanceRate = 0.9
 FogShowcase.ug.generator.offerCostIncrease = 0.5
 FogShowcase.ug.generator.shuffleUsers = false
+FogShowcase.ug.generator.userTraceFilePath = ""
 
 # Apps
 #*.dc.blade[*].osModule.appsVectors[*].appModule[*].userAppName = "DummyApplication"
