feat: New experiment with 100 users of first type
There were also various refactors and optimizations of the code

--- a/simulations/FogShowcase/omnetpp.ini
+++ b/simulations/FogShowcase/omnetpp.ini
@@ -1,5 +1,4 @@
 [General]
-network = FogShowcase
 
 # Logging events settings
 *.cp.cmdenv-log-level = trace
@@ -18,6 +17,9 @@ cmdenv-log-prefix = "[ %m ] : "
 # SimData settings
 *.simData.simSchema.typename = "SimSchemaMySQL"
 *.simData.simSchema.hostName = "tcp://127.0.0.1:3306"
+
+[Config FogShowcase]
+network = FogShowcase
 *.simData.manager.experiment = "Test"
 
 # Network
@@ -59,5 +61,10 @@ FogShowcase.ug.generator.offerCostIncrease = 0.5
 FogShowcase.ug.generator.shuffleUsers = false
 FogShowcase.ug.generator.userTraceFilePath = ""
 
-# Apps
-#*.dc.blade[*].osModule.appsVectors[*].appModule[*].userAppName = "DummyApplication"
+[Config FogShowcase_100]
+extends=FogShowcase
+*.simData.manager.experiment = "Test3"
+
+# Obvious fix *.dc.numBlades = 20 let's fix first the problem with the scheduler
+*.dc.blade.numBlades = 20
+*.dc.blade[*].diskSize = 2000GB
