feat(LocalIotApp): Included the new application model
Also testing the socket handling by the hypervisor! CheckingHubModule doesn't help at all.

--- a/simulations/EdgeTesting/omnetpp.ini
+++ b/simulations/EdgeTesting/omnetpp.ini
@@ -57,11 +57,13 @@ seed-0-mt = 0
 *.tile[*].sensors = 2
 *.tile[*].actuators = 2
 
-
 # Actuator settings
 *.tile[*].actuator*.numApps = 1
 *.tile[*].actuator*.app[0].typename = "UdpSink"
 *.tile[*].actuator*.app[0].localPort = 1000
+
+# Controller preloading app
+*.tile[*].controller*.hy.apps = "SmartHomeApp"
 
 ## Config Ip assignment
 *.configurator.config = xmldoc("net-settings.xml")
