fix: More fixes regarding EdgeTesting scenario
Now we've got proper interfaces but there's a lot of discovery in the process.
We might have to switch to wifi.

--- a/simulations/EdgeTesting/omnetpp.ini
+++ b/simulations/EdgeTesting/omnetpp.ini
@@ -64,6 +64,7 @@ seed-0-mt = 0
 
 # Controller preloading app
 *.tile[*].controller*.hy.apps = "SmartHomeApp"
+*.tile[*].controller*.ns.enableQueue = false
 
 ## Config Ip assignment
 *.configurator.config = xmldoc("net-settings.xml")
