fix: General fixes

--- a/simulations/EdgeTesting/omnetpp.ini
+++ b/simulations/EdgeTesting/omnetpp.ini
@@ -47,7 +47,7 @@ seed-0-mt = 0
 *.simData.manager.experiment = "Test"
 
 # Routing settings
-#*.*.ipv4.arp.typename = "GlobalArp"
+*.*.ipv4.arp.typename = "GlobalArp"
 *.*.ipv4.routingTable.netmaskRoutes = ""
 
 # Wireless settings
@@ -56,6 +56,13 @@ seed-0-mt = 0
 ## Tile settings
 *.tile[*].sensors = 2
 *.tile[*].actuators = 2
+
+## Tile settings
+#*.tile[0].**.wlan[*].mgmt.ssid = "alpha"
+#*.tile[1].**.wlan[*].mgmt.ssid = "bravo"
+#*.tile[2].**.wlan[*].mgmt.ssid = "charlie"
+#*.tile[3].**.wlan[*].mgmt.ssid = "delta"
+#*.tile[4].**.wlan[*].mgmt.ssid = "e"
 
 # Actuator settings
 *.tile[*].actuator*.numApps = 1
