fix: Fixed errors on CloudProvider
Now there aren't infinite loops

--- a/simulations/FogShowcase/omnetpp.ini
+++ b/simulations/FogShowcase/omnetpp.ini
@@ -11,6 +11,7 @@
 
 **.cmdenv-log-level = off
 cmdenv-log-prefix = "[ %m ] : "
+cmdenv-redirect-output = true
 
 # SimData settings
 *.simData.simSchema.typename = "SimSchemaMySQL"
@@ -49,11 +50,11 @@ network = FogShowcase
 
 FogShowcase.ug.generator.allUsersArriveAtOnce = false
 FogShowcase.ug.generator.intervalBetweenUsers = true
-FogShowcase.ug.generator.distribution = 60s
+FogShowcase.ug.generator.distribution = 30s
 FogShowcase.ug.generator.maxStartTime_t1 = 100000000
-FogShowcase.ug.generator.nRentTime_t2 = 10000
-FogShowcase.ug.generator.maxSubTime_t3 = 55000
-FogShowcase.ug.generator.maxSubscriptionTime = 86400
+FogShowcase.ug.generator.nRentTime_t2 = 1000
+FogShowcase.ug.generator.maxSubTime_t3 = 3600
+FogShowcase.ug.generator.maxSubscriptionTime = 3600
 FogShowcase.ug.generator.offerAcceptanceRate = 0.9
 FogShowcase.ug.generator.offerCostIncrease = 0.5
 FogShowcase.ug.generator.shuffleUsers = false
@@ -64,5 +65,6 @@ extends=FogShowcase
 *.simData.manager.experiment = "Test3"
 
 # Obvious fix *.dc.numBlades = 20 let's fix first the problem with the scheduler
-*.dc.blade.numBlades = 20
+#*.dc.blade.numBlades = 20
+*.dc.numBlades = 20
 *.dc.blade[*].diskSize = 2000GB
