feat(FogNode): Readded the fog node into the ecosystem
It acts as a double agent, it routes traffic and it has computing power

--- a/simulations/FogShowcase/omnetpp.ini
+++ b/simulations/FogShowcase/omnetpp.ini
@@ -24,8 +24,8 @@ network = FogShowcase
 # Network
 *.configurator.dumpConfig = "ips.xml"
 *.configurator.config = xml("<config> \
-                                <interface hosts='FogShowcase.cp' names='eth0' address='1.1.1.1'/> \
-                                <interface hosts='FogShowcase.smq' names='eth0' address='24.24.24.24'/> \
+                                <interface hosts='*.cp' names='eth0' address='10.0.1.1'/> \
+                                <interface hosts='*.smq' names='eth0' address='10.0.2.1'/> \
 								<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
                              </config>")
 
@@ -48,23 +48,62 @@ network = FogShowcase
 *.dc.blade[*].cpu.cpuCore[*].speed = 60000
 *.dc.blade[*].cpu.cpuCore[*].tick = 60s
 
-FogShowcase.ug.generator.allUsersArriveAtOnce = false
-FogShowcase.ug.generator.intervalBetweenUsers = true
-FogShowcase.ug.generator.distribution = 30s
-FogShowcase.ug.generator.maxStartTime_t1 = 100000000
-FogShowcase.ug.generator.nRentTime_t2 = 1000
-FogShowcase.ug.generator.maxSubTime_t3 = 3600
-FogShowcase.ug.generator.maxSubscriptionTime = 3600
-FogShowcase.ug.generator.offerAcceptanceRate = 0.9
-FogShowcase.ug.generator.offerCostIncrease = 0.5
-FogShowcase.ug.generator.shuffleUsers = false
-FogShowcase.ug.generator.userTraceFilePath = ""
+*.ug.generator.allUsersArriveAtOnce = false
+*.ug.generator.intervalBetweenUsers = true
+*.ug.generator.distribution = 30s
+*.ug.generator.maxStartTime_t1 = 100000000
+*.ug.generator.nRentTime_t2 = 1000
+*.ug.generator.maxSubTime_t3 = 3600
+*.ug.generator.maxSubscriptionTime = 3600
+*.ug.generator.offerAcceptanceRate = 0.9
+*.ug.generator.offerCostIncrease = 0.5
+*.ug.generator.shuffleUsers = false
+*.ug.generator.userTraceFilePath = ""
 
 [Config FogShowcase_100]
 extends=FogShowcase
 *.simData.manager.experiment = "Test3"
-
-# Obvious fix *.dc.numBlades = 20 let's fix first the problem with the scheduler
-#*.dc.blade.numBlades = 20
 *.dc.numBlades = 20
-*.dc.blade[*].diskSize = 2000GB
+*.dc.blade[*].diskSize = 4000GB
+
+[Config FogShowcase2_100]
+extends=FogShowcase_100
+network=FogShowcase2
+
+# DataCenter settings
+*.dc*.numBlades = 24
+*.dc*.dcManager.minActiveMachines = 4
+
+# Blades settings
+*.dc*.blade[*].staticAppAssignment = false
+*.dc*.blade[*].isVirtualHardware = true
+*.dc*.blade[*].maxUsers = 24
+*.dc*.blade[*].maxVMs = 24
+*.dc*.blade[*].numCpuCores = 24
+*.dc*.blade[*].memorySize = 256GB
+*.dc*.blade[*].diskSize = 4000GB
+*.dc*.blade[*].diskReadBandwidth = 500Mbps
+*.dc*.blade[*].diskWriteBandwidth = 500Mbps
+
+# CPU
+*.dc*.blade[*].cpu.cpuCore[*].speed = 60000
+*.dc*.blade[*].cpu.cpuCore[*].tick = 60s
+
+# FogNode settings
+*.fg*.numBlades = 4
+*.fg*.dcManager.minActiveMachines = 4
+
+# Blades settings
+*.fg*.blade[*].staticAppAssignment = false
+*.fg*.blade[*].isVirtualHardware = true
+*.fg*.blade[*].maxUsers = 24
+*.fg*.blade[*].maxVMs = 24
+*.fg*.blade[*].numCpuCores = 24
+*.fg*.blade[*].memorySize = 256GB
+*.fg*.blade[*].diskSize = 500GB
+*.fg*.blade[*].diskReadBandwidth = 500Mbps
+*.fg*.blade[*].diskWriteBandwidth = 500Mbps
+
+# CPU
+*.fg*.blade[*].cpu.cpuCore[*].speed = 60000
+*.fg*.blade[*].cpu.cpuCore[*].tick = 60s
