feat(Edgeshowcase): Renovated the environement, now it runs smoothly
Also fixed a ton of bugs in the way

--- a/simulations/EdgeTesting/omnetpp.ini
+++ b/simulations/EdgeTesting/omnetpp.ini
@@ -3,6 +3,7 @@
 print-undisposed=true
 
 ## Time resolution
+sim-time-limit = 1h
 simtime-resolution = ps
 
 ## Network
@@ -22,15 +23,15 @@ cmdenv-event-banners=false
 cmdenv-log-prefix = "(%t):[%l] %m  "
 
 ## Allow to examine details of recorded history of a simulation, focusing on the behavior instead of the statistical results.
-record-eventlog = false
-**.module-eventlog-recording = false
+#record-eventlog = false
+#**.module-eventlog-recording = false
 eventlog-message-detail-pattern = *:userID,strVmId,isResponse,operation,result
 
 ## Recording of simulation results - recordScalar() - recordStatistic()
-**.statistic-recording = false  ## from a @statistic in ned file
-**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
-**.vector-recording = false ## output vector (recorded using cOutVector objects)
-**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
+#**.statistic-recording = false  ## from a @statistic in ned file
+#**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
+#**.vector-recording = false ## output vector (recorded using cOutVector objects)
+#**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
 
 ## Random seeds fix
 seed-set = 0
