feat(EdgeScenario): Simple 1:1 test scenario
It will allow for a simple yet good study

--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -4,7 +4,7 @@ print-undisposed=true
 
 ## Time resolution
 sim-time-limit = 1h
-simtime-resolution = ps
+#simtime-resolution = ps
 
 ## Comand line environment
 cmdenv-express-mode = false
@@ -13,7 +13,7 @@ cmdenv-event-banners=false
 #ned-path = ../../src;../;
 
 ## Network
-network = EdgeNetwork
+network = SimpleFogNetwork
 
 ## Log
 **.cloudProvider.cmdenv-log-level = off
@@ -28,57 +28,56 @@ cmdenv-log-prefix = "(%t):[%l] %m  "
 eventlog-message-detail-pattern = *:userID,strVmId,isResponse,operation,result
 
 ## Recording of simulation results - recordScalar() - recordStatistic()
-#**.statistic-recording = false  ## from a @statistic in ned file
-#**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
-#**.vector-recording = false ## output vector (recorded using cOutVector objects)
-#**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
+**.statistic-recording = false  ## from a @statistic in ned file
+**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
+**.vector-recording = false ## output vector (recorded using cOutVector objects)
+**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
 
 ## Random seeds fix
 seed-set = 0
 num-rngs = 1
 seed-0-mt = 0
 
-# network = INETComm
-
 # SimSchema settings
 *.simData.simSchema.typename = "SimSchemaMySQL"
 *.simData.simSchema.hostName = "tcp://127.0.0.1:3306"
-
-# Experiment settings
 *.simData.manager.experiment = "Test"
 
 # Routing settings
 *.*.ipv4.arp.typename = "GlobalArp"
 *.*.ipv4.routingTable.netmaskRoutes = ""
 
-# Wireless settings
-*.*.wlan[*].bitrate = 54Mbps
-*.edgeTiles = 3
+*.dc.numBlades = 4
+*.dc.dcManager.minActiveMachines = 4
 
-## Tile settings
-*.tile[*].sensors = 2
-*.tile[*].actuators = 2
+# Blades settings
+*.dc.blade[*].staticAppAssignment = false
+*.dc.blade[*].isVirtualHardware = true
+*.dc.blade[*].maxUsers = 24
+*.dc.blade[*].maxVMs = 24
+*.dc.blade[*].numCpuCores = 24
+*.dc.blade[*].memorySize = 256GB
+*.dc.blade[*].diskSize = 500GB
+*.dc.blade[*].diskReadBandwidth = 500Mbps
+*.dc.blade[*].diskWriteBandwidth = 500Mbps
+*.dc.blade[*].cpu.cpuCore[*].speed = 60000
+*.dc.blade[*].cpu.cpuCore[*].tick = 60s
 
-# Actuator settings
-*.tile[*].actuator*.numApps = 1
-*.tile[*].actuator*.app[0].typename = "UdpSink"
-*.tile[*].actuator*.app[0].localPort = 1000
-
-# Controller preloading app
-*.tile[*].controller*.hy.apps = "SmartHomeApp"
-*.tile[*].controller*.ns.enableQueue = false
+*.tile*.sensors = 0
+*.tile*.actuators = 1
 
 ## Config Ip assignment
 *.configurator.config = xml("<config> \
-	<interface hosts='*.tile[*].**' address='10.0.x.x' netmask='255.255.x.x'/> \
-	<interface among='**.router*' address='10.x.x.x' netmask='255.x.x.x'/> \
+	<interface hosts='*.dns' address='10.1.0.1' netmask='255.x.x.x'/> \
 	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
 </config>")
 
-#*.configurator.dumpConfig = 'ips.xml"
+**.dc.**.enableQueue = false
+**.dc.**.hasCloudEvents = false
+**.dc.serviceDeployed = "service"
 
-[Config experiment]
-seed-set= ${R=5,6,8,11}
-*.tile[*].sensors = ${S=1..20 step 5}
-*.tile[*].actuators = ${A=1..20 step 5 ! S}
+**.dc.stack.numApps = 1
+**.dc.stack.app[0].typename = "TcpGenericServerApp"
+**.dc.stack.app[0].replyDelay = 1s
+**.dc.stack.app[0].localPort = 443
 
