feat(IotApplication): Tested and debugged the IotApplication
Now it's time for statistics!

--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -44,7 +44,7 @@ seed-0-mt = 0
 *.simData.manager.experiment = "Test"
 
 # Routing settings
-*.*.ipv4.arp.typename = "GlobalArp"
+#*.*.ipv4.arp.typename = "GlobalArp"
 *.*.ipv4.routingTable.netmaskRoutes = ""
 
 *.dc.numBlades = 4
@@ -63,14 +63,18 @@ seed-0-mt = 0
 *.dc.blade[*].cpu.cpuCore[*].speed = 60000
 *.dc.blade[*].cpu.cpuCore[*].tick = 60s
 
-*.tile*.sensors = 0
-*.tile*.actuators = 1
-
 ## Config Ip assignment
 *.configurator.config = xml("<config> \
-	<interface hosts='*.dns' address='10.1.0.1' netmask='255.x.x.x'/> \
+	<interface hosts='*.dns' address='10.0.0.1'/> \
 	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
 </config>")
+*.configurator.dumpConfig = "ips.xml"
+ 
+
+*.tile*.sensors = 2
+*.tile*.actuators = 1
+*.tile*.controller*.hy.apps = "SmartHomeAppEndToEnd"
+*.tile*.controller*.ns.dns = "10.0.0.1"
 
 **.dc.**.enableQueue = false
 **.dc.**.hasCloudEvents = false
