feat: Statistical results for EdgeScenario
Added also some needed fixes for the simulation configurations.

--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -28,15 +28,23 @@ cmdenv-log-prefix = "(%t):[%l] %m  "
 eventlog-message-detail-pattern = *:userID,strVmId,isResponse,operation,result
 
 ## Recording of simulation results - recordScalar() - recordStatistic()
-**.statistic-recording = false  ## from a @statistic in ned file
-**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
-**.vector-recording = false ## output vector (recorded using cOutVector objects)
-**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
+
+#**.statistic-recording = false  ## from a @statistic in ned file
+#**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
+#**.vector-recording = false ## output vector (recorded using cOutVector objects)
+#**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
+
+**.sensor[*].statistic-recording = false
+**.actuator[*].statistic-recording = false
+**.ap[*].statistic-recording = false
 
 ## Random seeds fix
-seed-set = 0
-num-rngs = 1
-seed-0-mt = 0
+num-rngs = 3
+**.metropolitan.ipv4Delayer.rng-0 = 1
+**.metropolitan.ipv4Delayer.config = xmldoc("metropolitan.xml")
+
+**.backbone.ipv4Delayer.rng-0 = 2
+**.backbone.ipv4Delayer.config = xmldoc("backbone.xml")
 
 # SimSchema settings
 *.simData.simSchema.typename = "SimSchemaMySQL"
@@ -44,11 +52,10 @@ seed-0-mt = 0
 *.simData.manager.experiment = "Test"
 
 # Routing settings
-#*.*.ipv4.arp.typename = "GlobalArp"
+**.ipv4.arp.typename = "GlobalArp"
 *.*.ipv4.routingTable.netmaskRoutes = ""
 
 *.dc.numBlades = 4
-*.dc.dcManager.minActiveMachines = 4
 
 # Blades settings
 *.dc.blade[*].staticAppAssignment = false
@@ -63,13 +70,27 @@ seed-0-mt = 0
 *.dc.blade[*].cpu.cpuCore[*].speed = 60000
 *.dc.blade[*].cpu.cpuCore[*].tick = 60s
 
+*.fg.numBlades = 4
+
+# Blades settings
+*.fg.blade[*].staticAppAssignment = false
+*.fg.blade[*].isVirtualHardware = true
+*.fg.blade[*].maxUsers = 24
+*.fg.blade[*].maxVMs = 24
+*.fg.blade[*].numCpuCores = 24
+*.fg.blade[*].memorySize = 256GB
+*.fg.blade[*].diskSize = 500GB
+*.fg.blade[*].diskReadBandwidth = 500Mbps
+*.fg.blade[*].diskWriteBandwidth = 500Mbps
+*.fg.blade[*].cpu.cpuCore[*].speed = 60000
+*.fg.blade[*].cpu.cpuCore[*].tick = 60s
+
 ## Config Ip assignment
 *.configurator.config = xml("<config> \
 	<interface hosts='*.dns' address='10.0.0.1'/> \
 	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
 </config>")
 *.configurator.dumpConfig = "ips.xml"
- 
 
 *.tile*.sensors = 2
 *.tile*.actuators = 1
@@ -80,8 +101,24 @@ seed-0-mt = 0
 **.dc.**.hasCloudEvents = false
 **.dc.serviceDeployed = "service"
 
+**.fg.**.enableQueue = false
+**.fg.**.hasCloudEvents = false
+**.fg.serviceDeployed = "service2"
+
 **.dc.stack.numApps = 1
 **.dc.stack.app[0].typename = "TcpGenericServerApp"
-**.dc.stack.app[0].replyDelay = 1s
+**.dc.stack.app[0].replyDelay = 0s
 **.dc.stack.app[0].localPort = 443
 
+**.fg.stack.numApps = 1
+**.fg.stack.app[0].typename = "TcpGenericServerApp"
+**.fg.stack.app[0].replyDelay = 0s
+**.fg.stack.app[0].localPort = 443
+
+[Config targetDc]
+repeat=30
+**.tile*.serviceName = "service"
+
+[Config targetFog]
+repeat=30
+**.tile*.serviceName = "service2"
