fix: Fixes around the models + more statistics!

--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -34,16 +34,27 @@ eventlog-message-detail-pattern = *:userID,strVmId,isResponse,operation,result
 #**.vector-recording = false ## output vector (recorded using cOutVector objects)
 #**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
 
-**.sensor[*].statistic-recording = false
-**.actuator[*].statistic-recording = false
-**.ap[*].statistic-recording = false
+**.sensor**.statistic-recording = false
+**.actuator**.statistic-recording = false
+**.ap.**.statistic-recording = false
+**.dns**.statistic-recording = false
+**.eth[*].**.statistic-recording = false
+**.ipv4.**.statistic-recording = false
+
+**.dns**.scalar-recording = false
+**.ap**.scalar-recording = false
+**.sensor**.scalar-recording = false
+**.actuator**.scalar-recording = false
+**.eth[*].**.scalar-recording = false
+**.ipv4.**.scalar-recording = false
 
 ## Random seeds fix
-num-rngs = 3
-**.metropolitan.ipv4Delayer.rng-0 = 1
+num-rngs = 4
+**.local.ipv4Delayer.rng-0 = 1
+**.local.ipv4Delayer.config = xmldoc("local.xml")
+**.metropolitan.ipv4Delayer.rng-0 = 2
 **.metropolitan.ipv4Delayer.config = xmldoc("metropolitan.xml")
-
-**.backbone.ipv4Delayer.rng-0 = 2
+**.backbone.ipv4Delayer.rng-0 = 3
 **.backbone.ipv4Delayer.config = xmldoc("backbone.xml")
 
 # SimSchema settings
@@ -55,31 +66,30 @@ num-rngs = 3
 **.ipv4.arp.typename = "GlobalArp"
 *.*.ipv4.routingTable.netmaskRoutes = ""
 
-*.dc.numBlades = 4
 
 # Blades settings
+*.dc.numBlades = 40
 *.dc.blade[*].staticAppAssignment = false
 *.dc.blade[*].isVirtualHardware = true
-*.dc.blade[*].maxUsers = 24
-*.dc.blade[*].maxVMs = 24
-*.dc.blade[*].numCpuCores = 24
-*.dc.blade[*].memorySize = 256GB
-*.dc.blade[*].diskSize = 500GB
+*.dc.blade[*].maxUsers = 16
+*.dc.blade[*].maxVMs = 16
+*.dc.blade[*].numCpuCores = 16
+*.dc.blade[*].memorySize = 64GB
+*.dc.blade[*].diskSize = 4000GB
 *.dc.blade[*].diskReadBandwidth = 500Mbps
 *.dc.blade[*].diskWriteBandwidth = 500Mbps
 *.dc.blade[*].cpu.cpuCore[*].speed = 60000
 *.dc.blade[*].cpu.cpuCore[*].tick = 60s
 
-*.fg.numBlades = 4
-
 # Blades settings
+*.fg.numBlades = 10
 *.fg.blade[*].staticAppAssignment = false
 *.fg.blade[*].isVirtualHardware = true
-*.fg.blade[*].maxUsers = 24
-*.fg.blade[*].maxVMs = 24
-*.fg.blade[*].numCpuCores = 24
-*.fg.blade[*].memorySize = 256GB
-*.fg.blade[*].diskSize = 500GB
+*.fg.blade[*].maxUsers = 8
+*.fg.blade[*].maxVMs = 8
+*.fg.blade[*].numCpuCores = 8
+*.fg.blade[*].memorySize = 16GB
+*.fg.blade[*].diskSize = 2000GB
 *.fg.blade[*].diskReadBandwidth = 500Mbps
 *.fg.blade[*].diskWriteBandwidth = 500Mbps
 *.fg.blade[*].cpu.cpuCore[*].speed = 60000
@@ -90,12 +100,10 @@ num-rngs = 3
 	<interface hosts='*.dns' address='10.0.0.1'/> \
 	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
 </config>")
-*.configurator.dumpConfig = "ips.xml"
+#*.configurator.dumpConfig = "ips.xml"
 
-*.tile*.sensors = 2
-*.tile*.actuators = 1
-*.tile*.controller*.hy.apps = "SmartHomeAppEndToEnd"
-*.tile*.controller*.ns.dns = "10.0.0.1"
+*.controller.hy.apps = "SmartHomeAppEndToEnd"
+*.controller.ns.dns = "10.0.0.1"
 
 **.dc.**.enableQueue = false
 **.dc.**.hasCloudEvents = false
@@ -106,19 +114,19 @@ num-rngs = 3
 **.fg.serviceDeployed = "service2"
 
 **.dc.stack.numApps = 1
-**.dc.stack.app[0].typename = "TcpGenericServerApp"
+**.dc.stack.app[0].typename = "SimService"
 **.dc.stack.app[0].replyDelay = 0s
 **.dc.stack.app[0].localPort = 443
 
 **.fg.stack.numApps = 1
-**.fg.stack.app[0].typename = "TcpGenericServerApp"
+**.fg.stack.app[0].typename = "SimService"
 **.fg.stack.app[0].replyDelay = 0s
 **.fg.stack.app[0].localPort = 443
 
 [Config targetDc]
-repeat=30
-**.tile*.serviceName = "service"
+#repeat=30
+*.serviceName = "service"
 
 [Config targetFog]
-repeat=30
-**.tile*.serviceName = "service2"
+#repeat=30
+*.serviceName = "service2"
