fix: Fixed bug in SimService

--- a/simulations/EdgeBigScenario/omnetpp.ini
+++ b/simulations/EdgeBigScenario/omnetpp.ini
@@ -145,11 +145,30 @@ num-rngs = 4
 **.fgE3.serviceDeployed = "fgE3"
 
 # Users config
-*.usersA[*].typename = "SmartHouse"
-*.usersB[*].typename = "SmartHouse"
-*.usersC[*].typename = "SmartHouse"
-*.usersD[*].typename = "SmartHouse"
-*.usersE[*].typename = "SmartHouse"
+*.usersA[0..1].typename = "SmartFactory"
+*.usersA[2..3].typename = "SmartBuilding"
+*.usersA[4..7].typename = "SmartFarm"
+*.usersA[8..19].typename = "SmartHouse"
+
+*.usersB[0..1].typename = "SmartFactory"
+*.usersB[2..3].typename = "SmartBuilding"
+*.usersB[4..7].typename = "SmartFarm"
+*.usersB[8..19].typename = "SmartHouse"
+
+*.usersC[0..1].typename = "SmartFactory"
+*.usersC[2..3].typename = "SmartBuilding"
+*.usersC[4..7].typename = "SmartFarm"
+*.usersC[8..19].typename = "SmartHouse"
+
+*.usersD[0..1].typename = "SmartFactory"
+*.usersD[2..3].typename = "SmartBuilding"
+*.usersD[4..7].typename = "SmartFarm"
+*.usersD[8..19].typename = "SmartHouse"
+
+*.usersE[0..1].typename = "SmartFactory"
+*.usersE[2..3].typename = "SmartBuilding"
+*.usersE[4..7].typename = "SmartFarm"
+*.usersE[8..19].typename = "SmartHouse"
 
 **.controller.ns.dns = "10.0.0.1"
 
